--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10916,7 +10916,7 @@ html {
 }
 
 body {
-  background-image: url(/images/1.png);
+  background-image: url(/images/4.png);
 }
 
 .img-thumbnail {
@@ -10988,5 +10988,6 @@ button:focus {
 
 .btn-outline-primary {
   border-color: transparent;
+  position: center;
 }
 
