admin blade　修正（途中）

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10988,6 +10988,9 @@ button:focus {
 
 .btn-outline-primary {
   border-color: transparent;
-  position: center;
+}
+
+.card {
+  display: contents;
 }
 
