--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,8 +7,8 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
-// Customize
-@import 'customize';
+// frontend
+@import 'frontend';
 
-// Admin
+// admin
 @import 'admin';
