--- a/resources/sass/_frontend.scss
+++ b/resources/sass/_frontend.scss
@@ -105,10 +105,10 @@
     
 	h1 a {
 		display: block;
-		width: 64px;
-		height: 69px;
+		width: 300px;
+		height: 300px;
 		font-size: 0;
-		background: url(/images/logo.png) left top/64px auto no-repeat;
+		background: url(/images/logo.png) left top no-repeat;
 	}
 	
 	.btn-outline-success{
@@ -120,16 +120,33 @@
 	    float: right;
 	}
 	
-	.card-img-overlay{
-	    background: url(/images/beer-walker.png) no-repeat;
-	    
-	}
-	
-	.card-body{
-	    margin-top: 300;
-	    margin-left: 600;
-	}
-	
+    .card-img-overlay{
+        width: 35rem;
+        margin-top: 50px;
+        margin-left: 5rem;
+    }
+    
+    .row{
+        display: contents;
+    }
+    
+    .d-flex{
+        flex-direction: column;
+    }
+    
+    .card-body{
+        text-align: -webkit-center;
+    }
+    
+    .show{
+        font-family: wawati SC;
+        margin-left: 20rem;
+        margin-top: 8rem;
+    }
+    
+    .size{
+        margin-top: 30px;
+    }
+    
 
-	
 }
